syntax = "proto3";
package com.lukianchenko.grpc;

message HelloRequest {
  string name = 1;
  repeated string hobbies = 2;
}

message HelloResponse {
  string greeting = 1;
}

service GreetingStreamService {
  rpc greetingStream(HelloRequest) returns (stream HelloResponse);
}

